# Radiant-Core

./: .gitignore  .gitlab-ci.yml  BUILD-WINDOWS-PORTABLE.md  CMakeLists.txt  COMMUNITY_ROADMAP.md  CONTRIBUTING.md  Dockerfile  Dockerfile-doxygen  Dockerfile.ci  Dockerfile.core  Dockerfile.seeder  GLYPHSWAP-PSRT-GUIDE  README.md  RELEASE-BUILD-GUIDE.md  RELEASE-SYSTEM-COMPLETE.md  ROADMAP.md  UPGRADES.md  build-all-releases.sh  build-complete.bat  build-docker-release.sh  build-linux-release.sh  build-macos-release.sh  build-portable-windows-v2.bat  build-portable-windows.bat  build-windows-cross-release.sh  create-installer.nsi  create-portable-dist.bat  create_build_h.py  libevent-stubs.c  radiant-core-windows-x64-demo.zip.sha256  radiant-core.code-workspace
REP-repo-setup/: README.md  REP-2001.md  rep-template.md
cmake/: PortableWindowsConfig.cmake
contrib/: build-release.sh  run-ci-local.sh
doc/: PRD.md  REST-interface.md  bips.md  build-freebsd.md  build-osx.md  build-unix-alpine.md  build-unix-arch.md  build-unix-deb.md  build-unix-rpm.md  build-unix.md  build-windows.md  dependencies.md  reduce-traffic.md  release-process.md  rep-process.md  rxd-github-usage-rules-and-guidelines.md  shared-libraries.md
libevent-2.1.12-stable/: Makefile.mingw  build_libevent.bat
libevent-build/: CMakeCache.txt  DartConfiguration.tcl  LibeventConfig.cmake  Uninstall.cmake  libevent.pc  libevent_core.pc  libevent_extra.pc  libevent_openssl.pc  verify_tests.bat
release/: README.txt
share/: genbuild.bat
src/seeder/: CMakeLists.txt  db.cpp  dns.cpp  main.cpp
(+628 files in other folders)
